Patient Service Updated

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,6 +7,7 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 # REQUIRED for lb:// URIs
+spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 spring.cloud.gateway.server.webflux.httpclient.resolution-strategy=load_balancer
 
 # ================ AUTH-SERVICE ================
@@ -21,3 +22,9 @@ spring.cloud.gateway.server.webflux.routes[1].id=DOCTOR-SERVICE
 spring.cloud.gateway.server.webflux.routes[1].uri=lb://DOCTOR-SERVICE
 spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/doctors/**
 spring.cloud.gateway.server.webflux.routes[1].filters[0]=StripPrefix=1
+
+# ================= PATIENT-SERVICE =================
+spring.cloud.gateway.server.webflux.routes[2].id=PATIENT-SERVICE
+spring.cloud.gateway.server.webflux.routes[2].uri=lb://PATIENT-SERVICE
+spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/patients/**
+spring.cloud.gateway.server.webflux.routes[2].filters[0]=StripPrefix=1
