--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,21 +10,35 @@ eureka.client.fetch-registry=true
 spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 spring.cloud.gateway.server.webflux.httpclient.resolution-strategy=load_balancer
 
-# ================ AUTH-SERVICE ================
+# ================ 1 AUTH-SERVICE =================
 spring.cloud.gateway.server.webflux.routes[0].id=AUTH-SERVICE
 spring.cloud.gateway.server.webflux.routes[0].uri=lb://AUTH-SERVICE
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/auth/**
 spring.cloud.gateway.server.webflux.routes[0].filters[0]=StripPrefix=1
 #spring.cloud.gateway.server.webflux.routes[0].filters[0]=RewritePath=/auth/(?<segment>.*),/${segment}
 
-# ================ DOCTOR-SERVICE ================
+# ================ 2 DOCTOR-SERVICE ===============
 spring.cloud.gateway.server.webflux.routes[1].id=DOCTOR-SERVICE
 spring.cloud.gateway.server.webflux.routes[1].uri=lb://DOCTOR-SERVICE
 spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/doctors/**
 spring.cloud.gateway.server.webflux.routes[1].filters[0]=StripPrefix=1
 
-# ================= PATIENT-SERVICE =================
+# ================= 3 PATIENT-SERVICE =============
 spring.cloud.gateway.server.webflux.routes[2].id=PATIENT-SERVICE
 spring.cloud.gateway.server.webflux.routes[2].uri=lb://PATIENT-SERVICE
 spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/patients/**
 spring.cloud.gateway.server.webflux.routes[2].filters[0]=StripPrefix=1
+
+# ================= 4 BOOKING-SERVICE =============
+spring.cloud.gateway.server.webflux.routes[3].id=BOOKING-SERVICE
+spring.cloud.gateway.server.webflux.routes[3].uri=lb://BOOKING-SERVICE
+spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/bookings/**
+spring.cloud.gateway.server.webflux.routes[3].filters[0]=StripPrefix=1
+
+# ================= 5 PAYMENT-SERVICE =============
+spring.cloud.gateway.server.webflux.routes[4].id=PAYMENT-SERVICE
+spring.cloud.gateway.server.webflux.routes[4].uri=lb://PAYMENT-SERVICE
+spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/payments/**
+spring.cloud.gateway.server.webflux.routes[4].filters[0]=StripPrefix=1
+
+
