--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=booking-service
+spring.application.name=BOOKING-SERVICE
 server.port=8084
 spring.datasource.url=jdbc:mysql://localhost:3306/bookings_db
 spring.datasource.username=root
