--- a/doctor-service/src/main/resources/application.properties
+++ b/doctor-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=doctor-service
+spring.application.name=DOCTOR-SERVICE
 server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/doctors_db
 spring.datasource.username=root
@@ -8,5 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 eureka.client.register-with-eureka=true
 eureka.client-fetch-registry=true
+spring.cloud.openfeign.discovery.enabled=true
+spring.cloud.openfeign.httpclient.enabled=true
 
 
