Doctor Service AWS-S3 Integration

--- a/doctor-service/src/main/resources/application.properties
+++ b/doctor-service/src/main/resources/application.properties
@@ -11,4 +11,10 @@ eureka.client-fetch-registry=true
 spring.cloud.openfeign.discovery.enabled=true
 spring.cloud.openfeign.httpclient.enabled=true
 
+cloud.aws.credentials.access-key=AKIAZRQI3ZL2LKJDIYIR
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=ap-south-1
+cloud.aws.stack.auto=false
+app.s3.bucket=doctor-appointment-booking-app
+
 
